noticia em destaque

--- a/views/home.html
+++ b/views/home.html
@@ -21,5 +21,18 @@
                 </div>
             </div>
         </header>
+
+        <section class="noticia-destaque">
+            <div class="center">
+                <div class="img-destaque">
+                    <div class="overlay-destaque"></div>
+                    <div class="title-destaque-descricao">
+                        <h2>Quer fugir das praias de verão?</h2>
+                        <p>Donec vitae libero convallis, tempus mauris ac, pretium arcu. Cras mattis ultrices eros, sed luctus eros. Nam pellentesque tincidunt tortor, nec facilisis sapien hendrerit a. Praesent sodales pharetra aliquam. Etiam lacus est, dignissim vitae faucibus ac, tempor in dolor. Ut eu magna ante. Nullam sit amet tempus urna. Sed egestas eleifend tortor nec fringilla. Maecenas et sem libero. Cras vulputate lacinia orci sed hendrerit.</p>
+                    </div>
+                    <img src="/public/images/landscape.jpg">
+                </div>
+            </div>
+        </section>
     </body>
 </html>
