--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,7 @@ header {
 
 .form-busca form {
     display: inline-block;
+    max-width: 200px;
     position: relative;
 }
 
@@ -46,6 +47,7 @@ header {
 .form-busca input {
     height: 40px;
     border: 0;
+    width: 100%;
     font-size: 20px;
     color: white;
     background-color: #008bb4;
@@ -64,4 +66,43 @@ header {
 
 ::-ms-input-placeholder {
     color: white;
+}
+
+section.noticia-destaque {
+    padding: 40px 0;
+}
+
+section.noticia-destaque > .center {
+    max-width: 960px;
+}
+
+.img-destaque {
+    width: 100%;
+    position: relative;
+}
+
+.img-destaque img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+.title-destaque-descricao {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    max-width: 600px;
+    color: white;
+    z-index: 2;
+}
+
+.overlay-destaque {
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
 }
