seção ultimas noticias + alteração da fonte padrão

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
@@ -31,6 +31,36 @@
                         <p>Donec vitae libero convallis, tempus mauris ac, pretium arcu. Cras mattis ultrices eros, sed luctus eros. Nam pellentesque tincidunt tortor, nec facilisis sapien hendrerit a. Praesent sodales pharetra aliquam. Etiam lacus est, dignissim vitae faucibus ac, tempor in dolor. Ut eu magna ante. Nullam sit amet tempus urna. Sed egestas eleifend tortor nec fringilla. Maecenas et sem libero. Cras vulputate lacinia orci sed hendrerit.</p>
                     </div>
                     <img src="/public/images/landscape.jpg">
+                </div>
+            </div>
+        </section>
+
+        <section class="outras-noticias">
+            <div class="title-outras-noticias">
+                <h2>Outras Noticias</h2>
+                <br><br>
+                <div class="center">
+                    <div class="ultimas">
+                        <div class="box-ultima-single">
+                            <img src="/public/images/noticia.png">
+                            <div class="conteudo-noticia-single">
+                                <h3>Natureza e Geral</h3>
+                                <h2>Como encarar o surf em Floripa</h2>
+                                <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
+                            </div>
+                        </div>
+                        <div class="box-ultima-single">
+                            <img src="/public/images/noticia.png">
+                            <div class="conteudo-noticia-single">
+                                <h3>Natureza e Geral</h3>
+                                <h2>Como encarar o surf em Floripa</h2>
+                                <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mais-lidas">
+                        <h3>Mais Lidas</h3>
+                    </div>
                 </div>
             </div>
         </section>
