--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -11,7 +11,7 @@ header {
 }
 
 .center {
-    max-width: 1100px;
+    max-width: 1280px;
     margin: 0 auto;
     padding: 0 2%;
     display: flex;
@@ -90,10 +90,20 @@ section.noticia-destaque > .center {
     position: absolute;
     bottom: 0;
     left: 0;
-    padding: 10px;
+    padding: 40px;
     max-width: 600px;
     color: white;
     z-index: 2;
+}
+
+.title-destaque-descricao h2 {
+    font-size: 64px;
+    margin: 20px 0;
+}
+
+.title-destaque-descricao p {
+    font-weight: lighter;
+    font-size: 16px;
 }
 
 .overlay-destaque {
@@ -105,4 +115,70 @@ section.noticia-destaque > .center {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 1;
+}
+
+section.outras-noticias {
+    padding: 30px 20px;
+    background-color: #EAEAEA;
+    text-align: center;
+}
+
+section.outras-noticias h2 {
+    font-size: 54px;
+}
+
+.ultimas {
+    width: 60%;
+    padding: 0 10px;
+    display: flex;
+}
+
+.box-ultima-single {
+    width: 48%;
+    margin-right: 2%;
+    background-color: white;
+    padding-bottom: 20px;
+    height: 100%;
+    border-radius: 10px;
+    text-align: left;
+}
+
+.conteudo-noticia-single {
+    padding: 20px;
+}
+
+.box-ultima-single img {
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.box-ultima-single h2 {
+    font-size: 28px !important;
+    color: #303336;
+}
+
+.box-ultima-single h3 {
+    font-size: 16px;
+    color: #33439B;
+    margin: 20px 0;
+}
+
+.box-ultima-single p {
+    font-size: 16px;
+    margin: 20px 0;
+    color: #7B8591;
+}
+
+.mais-lidas {
+    width: 40%;
+}
+
+.mais-lidas > h3 {
+    background-color: #3F51B5;
+    color: white;
+    text-align: center;
+    padding: 10px 8px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
