seção mais lidas + add responsividade

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
 header {
     padding: 8px 0;
     background-color: #0aacdc;
+    text-align: center;
 }
 
 .center {
@@ -15,6 +16,7 @@ header {
     margin: 0 auto;
     padding: 0 2%;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .logo {
@@ -131,6 +133,7 @@ section.outras-noticias h2 {
     width: 60%;
     padding: 0 10px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .box-ultima-single {
@@ -138,7 +141,6 @@ section.outras-noticias h2 {
     margin-right: 2%;
     background-color: white;
     padding-bottom: 20px;
-    height: 100%;
     border-radius: 10px;
     text-align: left;
 }
@@ -170,8 +172,23 @@ section.outras-noticias h2 {
     color: #7B8591;
 }
 
+.box-ultima-single a {
+    display: block;
+    width: 181px;
+    height: 56px;
+    border: 1px solid #EBEBEB;
+    text-decoration: none;
+    color: #0AACDC;
+    border-radius: 10px;
+    line-height: 56px;
+    text-align: center;
+    font-size: 19px;
+}
+
 .mais-lidas {
     width: 40%;
+    height: 100%;
+    background-color: white;
 }
 
 .mais-lidas > h3 {
@@ -181,4 +198,70 @@ section.outras-noticias h2 {
     padding: 10px 8px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+}
+
+.mais-lida-noticia-single {
+    text-align: left;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mais-lida-noticia-single img {
+    width: 30%;
+}
+
+.mais-lida-noticia-single .texto-mais-lida-single {
+    width: 70%;
+    padding: 8px 20px;
+}
+
+.texto-mais-lida-single h4 {
+    color: #40BE65;
+    letter-spacing: 3.2px;
+}
+
+.texto-mais-lida-single p {
+    color: #7B8591;
+    font-size: 14px;
+}
+
+.texto-mais-lida-single a {
+    margin-top: 10px;
+    display: block;
+    width: 121px;
+    height: 36px;
+    border: 1px solid #EBEBEB;
+    text-decoration: none;
+    color: #0AACDC;
+    border-radius: 10px;
+    line-height: 36px;
+    text-align: center;
+    font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+    .logo, .form-busca {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .form-busca {
+        text-align: center;
+    }
+
+    .title-destaque-descricao h2 {
+        font-size: 34px;
+    }
+
+    .mais-lidas, .ultimas {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .box-ultima-single {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
 }
