--- a/views/home.html
+++ b/views/home.html
@@ -28,9 +28,9 @@
                     <div class="overlay-destaque"></div>
                     <div class="title-destaque-descricao">
                         <h2>Quer fugir das praias de verão?</h2>
-                        <p>Donec vitae libero convallis, tempus mauris ac, pretium arcu. Cras mattis ultrices eros, sed luctus eros. Nam pellentesque tincidunt tortor, nec facilisis sapien hendrerit a. Praesent sodales pharetra aliquam. Etiam lacus est, dignissim vitae faucibus ac, tempor in dolor. Ut eu magna ante. Nullam sit amet tempus urna. Sed egestas eleifend tortor nec fringilla. Maecenas et sem libero. Cras vulputate lacinia orci sed hendrerit.</p>
+                        <p>Donec vitae libero convallis, tempus mauris ac, pretium arcu. Cras mattis ultrices eros, sed luctus eros. Nam pe...</p>
                     </div>
-                    <img src="/public/images/landscape.jpg">
+                    <img src="/public/images/landscape.png">
                 </div>
             </div>
         </section>
@@ -47,6 +47,7 @@
                                 <h3>Natureza e Geral</h3>
                                 <h2>Como encarar o surf em Floripa</h2>
                                 <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
+                                <a href="/encarar-o-surf">Saiba Mais</a>
                             </div>
                         </div>
                         <div class="box-ultima-single">
@@ -55,11 +56,46 @@
                                 <h3>Natureza e Geral</h3>
                                 <h2>Como encarar o surf em Floripa</h2>
                                 <p>A água gelada e o vento pode acabar com a sua felicidade de ir para a água. Cientistas afirmam que a chance de hipotermia é real e você precisa se cuidar. Veja como.</p>
+                                <a href="/encarar-o-surf">Saiba Mais</a>
                             </div>
                         </div>
                     </div>
                     <div class="mais-lidas">
                         <h3>Mais Lidas</h3>
+                        <div class="mais-lidas-noticias">
+                            <div class="mais-lida-noticia-single">
+                                <img src="/public/images/natureza_small.png">
+                                <div class="texto-mais-lida-single">
+                                    <h4>Natureza</h4>
+                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
+                                    <a href="/encarar-o-surf">Saiba Mais</a>
+                                </div>
+                            </div>
+                            <div class="mais-lida-noticia-single">
+                                <img src="/public/images/natureza_small.png">
+                                <div class="texto-mais-lida-single">
+                                    <h4>Natureza</h4>
+                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
+                                    <a href="/encarar-o-surf">Saiba Mais</a>
+                                </div>
+                            </div>
+                            <div class="mais-lida-noticia-single">
+                                <img src="/public/images/natureza_small.png">
+                                <div class="texto-mais-lida-single">
+                                    <h4>Natureza</h4>
+                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
+                                    <a href="/encarar-o-surf">Saiba Mais</a>
+                                </div>
+                            </div>
+                            <div class="mais-lida-noticia-single">
+                                <img src="/public/images/natureza_small.png">
+                                <div class="texto-mais-lida-single">
+                                    <h4>Natureza</h4>
+                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
+                                    <a href="/encarar-o-surf">Saiba Mais</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
