pagina single da noticia + pagina de busca

--- a/public/style.css
+++ b/public/style.css
@@ -20,11 +20,17 @@ header {
 }
 
 .logo {
+    text-align: left;
     width: 50%;
 }
 
 .logo h2 {
     color: white;
+}
+
+.logo a {
+    color: white;
+    text-decoration: none;
 }
 
 .form-busca {
@@ -247,6 +253,46 @@ footer {
     padding: 8px 0;
 }
 
+section.noticia {
+    padding: 20px 0;
+    background-color: #EAEAEA;
+}
+
+.noticia-single {
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    width: 58%;
+    margin-right: 2%;
+}
+
+.noticia-single h2 {
+    color: #303336;
+    font-size: 42px;
+    margin: 10px 0;
+}
+
+.noticia-single span {
+    color: #858582;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 3.2px;
+    font-weight: bold;
+}
+
+.noticia-single p {
+    color: #7B8591;
+    font-size: 15px;
+    line-height: 26px;
+    margin-top: 15px;
+}
+
+.noticia-single h3 {
+    color: #7B8591;
+    font-size: 33px;
+    margin: 10px 0;
+}
+
 @media screen and (max-width: 768px) {
     .logo, .form-busca {
         width: 100%;
@@ -270,5 +316,15 @@ footer {
         width: 100%;
         margin-right: 0;
         margin-bottom: 20px;
+    }
+
+    .logo {
+        text-align: center;
+    }
+
+    .noticia-single {
+        width: 100%;
+        margin-bottom: 20px;
+        margin-right: 0;
     }
 }
