--- a/views/home.html
+++ b/views/home.html
@@ -39,43 +39,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mais-lidas">
-                        <h3>Mais Lidas</h3>
-                        <div class="mais-lidas-noticias">
-                            <div class="mais-lida-noticia-single">
-                                <img src="/public/images/natureza_small.png">
-                                <div class="texto-mais-lida-single">
-                                    <h4>Natureza</h4>
-                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                    <a href="/encarar-o-surf">Saiba Mais</a>
-                                </div>
-                            </div>
-                            <div class="mais-lida-noticia-single">
-                                <img src="/public/images/natureza_small.png">
-                                <div class="texto-mais-lida-single">
-                                    <h4>Natureza</h4>
-                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                    <a href="/encarar-o-surf">Saiba Mais</a>
-                                </div>
-                            </div>
-                            <div class="mais-lida-noticia-single">
-                                <img src="/public/images/natureza_small.png">
-                                <div class="texto-mais-lida-single">
-                                    <h4>Natureza</h4>
-                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                    <a href="/encarar-o-surf">Saiba Mais</a>
-                                </div>
-                            </div>
-                            <div class="mais-lida-noticia-single">
-                                <img src="/public/images/natureza_small.png">
-                                <div class="texto-mais-lida-single">
-                                    <h4>Natureza</h4>
-                                    <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                    <a href="/encarar-o-surf">Saiba Mais</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <%- include('partials/mais-lidas.html') %>
                 </div>
             </div>
         </section>
