--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -6,12 +6,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     </head>
     <body>
         <header>
             <div class="center">
                 <div class="logo">
-                    <h2><span style="font-weight: lighter;">Danki</span><strong>News</strong></h2>
+                    <h2>
+                        <a href="/">
+                            <span style="font-weight: lighter;">Danki</span><strong>News</strong>
+                        </a>
+                    </h2>
                 </div>
                 <div class="form-busca">
                     <form action="/">
