--- a/public/style.css
+++ b/public/style.css
@@ -109,6 +109,11 @@ section.noticia-destaque > .center {
     margin: 20px 0;
 }
 
+.title-destaque-descricao a {
+    color: white;
+    text-decoration: none;
+}
+
 .title-destaque-descricao p {
     font-weight: lighter;
     font-size: 16px;
