--- a/views/partials/mais-lidas.html
+++ b/views/partials/mais-lidas.html
@@ -1,37 +1,15 @@
 <div class="mais-lidas">
     <h3>Mais Lidas</h3>
     <div class="mais-lidas-noticias">
-        <div class="mais-lida-noticia-single">
-            <img src="/public/images/natureza_small.png">
-            <div class="texto-mais-lida-single">
-                <h4>Natureza</h4>
-                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
+        <% for (let i = 0; i < posts.length; i++) { %>
+            <div class="mais-lida-noticia-single">
+                <img src="<%= posts[i].imagem %>">
+                <div class="texto-mais-lida-single">
+                    <h4><%= posts[i].titulo %></h4>
+                    <p><%- posts[i].descricaoCurta %>...</p>
+                    <a href="/<%= posts[i].slug %>">Saiba Mais</a>
+                </div>
             </div>
-        </div>
-        <div class="mais-lida-noticia-single">
-            <img src="/public/images/natureza_small.png">
-            <div class="texto-mais-lida-single">
-                <h4>Natureza</h4>
-                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-            </div>
-        </div>
-        <div class="mais-lida-noticia-single">
-            <img src="/public/images/natureza_small.png">
-            <div class="texto-mais-lida-single">
-                <h4>Natureza</h4>
-                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-            </div>
-        </div>
-        <div class="mais-lida-noticia-single">
-            <img src="/public/images/natureza_small.png">
-            <div class="texto-mais-lida-single">
-                <h4>Natureza</h4>
-                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                <a href="/encarar-o-surf">Saiba Mais</a>
-            </div>
-        </div>
+        <% } %>
     </div>
 </div>
