--- a/views/busca.html
+++ b/views/busca.html
@@ -7,40 +7,18 @@
             <br><br>
             <div class="center">
                 <div style="width: 100%;" class="mais-lidas">
-                    <h3>33 Resultados</h3>
+                    <h3><%= contagem %> Resultados</h3>
                     <div class="mais-lidas-noticias">
-                        <div class="mais-lida-noticia-single">
-                            <img src="/public/images/natureza_small.png">
-                            <div class="texto-mais-lida-single">
-                                <h4>Natureza</h4>
-                                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                <a href="/encarar-o-surf">Saiba Mais</a>
+                        <% for (let i = 0; i < posts.length; i++) { %>
+                            <div class="mais-lida-noticia-single">
+                                <img src="<%= posts[i].imagem %>">
+                                <div class="texto-mais-lida-single">
+                                    <h4><%= posts[i].titulo %></h4>
+                                    <p><%- posts[i].descricaoCurta %>...</p>
+                                    <a href="/<%= posts[i].slug %>">Saiba Mais</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="mais-lida-noticia-single">
-                            <img src="/public/images/natureza_small.png">
-                            <div class="texto-mais-lida-single">
-                                <h4>Natureza</h4>
-                                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                <a href="/encarar-o-surf">Saiba Mais</a>
-                            </div>
-                        </div>
-                        <div class="mais-lida-noticia-single">
-                            <img src="/public/images/natureza_small.png">
-                            <div class="texto-mais-lida-single">
-                                <h4>Natureza</h4>
-                                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                <a href="/encarar-o-surf">Saiba Mais</a>
-                            </div>
-                        </div>
-                        <div class="mais-lida-noticia-single">
-                            <img src="/public/images/natureza_small.png">
-                            <div class="texto-mais-lida-single">
-                                <h4>Natureza</h4>
-                                <p>A importância da floresta do ártico para a biodiversidade mundial. Qual o impacto o degelo na fauna e flora?</p>
-                                <a href="/encarar-o-surf">Saiba Mais</a>
-                            </div>
-                        </div>
+                        <% } %>
                     </div>
                 </div>
             </div>
